@@ -38,7 +38,6 @@ extern "C"
 #include <stdint.h>
 #include <stdio.h>
 #include <stdlib.h>
-#include <stdbool.h>
 
 /**
  * Return an immutable string describing this library's version.
