@@ -31,6 +31,7 @@
 #include <stdlib.h>
 #include <errno.h>
 #include <string.h>
+#include <stdbool.h>
 
 /* private data structure definitions */
 
