@@ -32,6 +32,7 @@
 #include <errno.h>
 #include <stdio.h>
 #include <string.h>
+#include <stdbool.h>
 
 struct poldiff_bool_summary
 {
